--- a/custom_components/vesync/manifest.json
+++ b/custom_components/vesync/manifest.json
@@ -12,6 +12,6 @@
   "documentation": "https://www.home-assistant.io/integrations/vesync",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/vlebourl/custom_vesync",
-  "requirements": ["pyvesync"],
+  "requirements": ["pyvesync @ git+https://github.com/N3ak/pyvesync.git"],
   "version": "1.0.0"
 }
